<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:id="@+id/menu_main">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tests"
            android:icon="@drawable/ic_tests"
            android:title="@string/menu_item_tests" />
        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/ic_rating"
            android:title="@string/menu_item_rating" />

    </group>

    <item android:title="@string/menu_section_others">
        <menu>
            <!--<item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />-->
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
               android:title="@string/menu_item_exit" />
        </menu>
    </item>

</menu>
