<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_et_name"
        style="@style/EditText"/>

    <EditText
        android:id="@+id/et_surename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_et_surename"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        style="@style/EditText"/>

    <EditText
        android:id="@+id/et_region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_et_region"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        style="@style/EditText"/>

    <EditText
        android:id="@+id/et_school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_et_school"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        style="@style/EditText"/>

    <Button
        android:id="@+id/bt_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_btn_signup"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        style="@style/EditText"/>

</LinearLayout>