<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_msg_information"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:gravity="center"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

    <!--<TextView
        android:id="@+id/tv_try_for_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_msg_try_free"
        android:textColor="@color/colorBlue"
        android:textSize="16sp"
        android:textIsSelectable="true"
        android:clickable="true"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:focusable="true" />-->

    <EditText
        android:id="@+id/et_keyword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_et_hint_keyword"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

    <Button
        android:id="@+id/bt_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_btn_next"
        android:layout_margin="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/tv_get_keyword_expo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/singup_msg_get_access_expo"/>

    <TextView
        android:id="@+id/tv_get_keyword_clickable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlue"
        android:clickable="true"
        android:text="@string/signup_msg_get_keyword_clickable"
        android:focusable="true" />


</LinearLayout>